@@ -7,7 +7,6 @@
 
 .c-dropdown__button {
   display: inline-block;
-  box-sizing: border-box;
   padding-inline-start: 0.5rem;
   padding-inline-end: 0.25rem;
   // Make this the same as the other buttons
