@@ -49,7 +49,6 @@
     width: 2rem;
     height: 2rem;
     background: transparent;
-    box-sizing: border-box;
     padding: 0;
     border-radius: 5px;
     display: grid;
