@@ -13,7 +13,6 @@
     @include transition(width 0.3s ease);
     border-radius: 1.5em;
     overflow: hidden;
-    box-sizing: border-box;
     text-align: end;
     line-height: 1.2em;
     color: $color-white;
