@@ -10,7 +10,6 @@
     border: 2px solid theme('colors.secondary.100');
     border-radius: 5px;
     color: $color-teal;
-    box-sizing: border-box;
     width: $task-width;
     height: $task-height;
     margin: 7px;
