@@ -7,7 +7,6 @@
   color: $color-white;
   width: $sidebar-toggle-size;
   height: $sidebar-toggle-size;
-  box-sizing: border-box;
   background: transparent;
   place-items: center;
   padding: 0;
